# c-str-span

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE-MIT  README.md  alpine.Dockerfile  debian.Dockerfile  generate_badges.sh  vcpkg.json
.github/workflows/: ci.yml
c_str_span/: CMakeLists.txt  c_str_hex_private.h  c_str_precondition.h  c_str_precondition_internal.h  c_str_result.h  c_str_result_internal.h  c_str_span.c  c_str_span.h  c_str_span_internal.h  c_str_span_log.h  c_str_span_precondition.c  c_str_span_printf.c  c_str_span_printf.h  c_str_span_private.h  c_str_span_stdbool.h  c_str_span_stdint.h  c_str_span_types.h  log.h
c_str_span/tests/: CMakeLists.txt  test.c  test_az_span.c  test_az_span.h  test_coverage.c  test_lib.h
cmake/: Amalgamate.cmake  CTestConfig.cmake  Config.cmake.in  MultiCPackConfig.cmake  README.txt  Welcome.txt  config.h.in
cmake/modules/: FetchCMocka.cmake
scripts/: update_badges.py  update_badges.sh
tests/: CMakeLists.txt  configure.h.in  test.c  test_az_span.c  test_az_span.h  test_lib.h  test_string.h
